--- a/css.css
+++ b/css.css
@@ -142,6 +142,29 @@ body
     margin-left: 380px;
 }
 
+.menu-icones
+{
+    cursor:pointer;
+}
+
+.logo-cabecalho
+{
+    cursor:pointer;
+}
+
+.logo-rodape
+{
+    cursor:pointer;
+}
+
+.menu-cabecalho-item:hover
+{
+    color: #EF1A38; 
+    font-weight: 600;
+    transition: 0.1s;
+    opacity: 0.7;
+    border-bottom: 2px solid #EF1A38;
+}
 
 
 
